--- a/documentation/definition.yaml
+++ b/documentation/definition.yaml
@@ -194,6 +194,95 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+
+      
+            
+  '/{blog_id}/settings/{name_space}':
+    get:
+      summary: 'Get the settings inside the name-space'
+      description: same
+      parameters:
+        - name: x_dc_key
+          in: header
+          type: string
+          required: true
+        - name: blog_id
+          in: path
+          type: string
+          required: true
+        - name: name_space
+          in: path
+          type: string
+          required: true
+      responses:
+        '200':
+          description: OK
+        '404':
+          description: this blog id does not exists
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+    post:
+      summary: Create a new namespace and or a new setting'
+      description: "Let body empty if you just want to create a namespace without setting."
+      parameters:
+        - name: x_dc_key
+          in: header
+          type: string
+          required: true
+        - name: blog_id
+          in: path
+          type: string
+          required: true
+        - name: name_space
+          in: path
+          type: string
+          required: true
+        - name: setting
+          description: Can be empty, Can pass many settings. [{"id":"string","type":"string","value":"string","value_change":"string Optional","global":"bool optional"},{"id2":...}]
+          in: body
+          schema:
+            $ref: '#/definitions/settings'
+      responses:
+        '201':
+          description: OK
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+            
+  '/{blog_id}/settings/{name_space}/{setting_id}':
+    get:
+      summary: Get value and type for one setting'
+      description: ""
+      parameters:
+        - name: x_dc_key
+          in: header
+          type: string
+          required: true
+        - name: blog_id
+          in: path
+          type: string
+          required: true
+        - name: name_space
+          in: path
+          type: string
+          required: true
+        - name: setting_id
+          in: path
+          type: string
+          required: true
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/OneSetting'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+    
   '/{blog-id}/posts':
     get:
       summary: Get list of posts
@@ -504,6 +593,24 @@ definitions:
         enum:
           - query_string
           - path_info
+  OneSetting:
+    type: object
+    properties:
+      ns: 
+        type: string
+      value:
+        type: string
+      type:
+        type: string
+      label:
+        type: string
+      global:
+        type: boolean
+        
+  settings:
+    type: array
+    items:
+      type: object
   Ids:
     type: object
     properties:
